Fix keywords alignment

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -309,5 +309,6 @@ html {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding: 0.2vh;
   }
 }
